--- a/blueprints/automation/tuya/tuya-TS0043-3-button-remote.yaml
+++ b/blueprints/automation/tuya/tuya-TS0043-3-button-remote.yaml
@@ -10,6 +10,27 @@ blueprint:
   domain: automation
 
   input:
+    mode:
+      name: Automation Mode
+      description: "https://www.home-assistant.io/docs/automation/modes/"
+      default: restart
+      selector:
+        select:
+          mode: dropdown
+          options:
+            - single
+            - restart
+            - queued
+            - parallel
+    max:
+      name: Automation Max Queue
+      description: The maximum number of runs that can be executing and/or queued up at a time.
+      default: 10
+      selector:
+        number:
+          mode: box
+          min: 1
+          max: 100
     remote:
       name: Tuya - TS0043 3 Button Remote
       description: Select the remote control you wish to use.
@@ -62,6 +83,10 @@ blueprint:
       selector:
         action:
       default: []
+
+mode: !input mode
+max: !input max
+max_exceeded: silent
 
 trigger:
   - platform: event
