--- a/blueprints/automation/aqara/aqara-opple-6-button-remote.yaml
+++ b/blueprints/automation/aqara/aqara-opple-6-button-remote.yaml
@@ -8,6 +8,27 @@ blueprint:
   domain: automation
 
   input:
+    mode:
+      name: Automation Mode
+      description: "https://www.home-assistant.io/docs/automation/modes/"
+      default: restart
+      selector:
+        select:
+          mode: dropdown
+          options:
+            - single
+            - restart
+            - queued
+            - parallel
+    max:
+      name: Automation Max Queue
+      description: The maximum number of runs that can be executing and/or queued up at a time.
+      default: 10
+      selector:
+        number:
+          mode: box
+          min: 1
+          max: 100
     remote:
       name: Aqara Opple - 6 Button Remote
       description: Select the remote control you wish to use.
@@ -106,8 +127,8 @@ blueprint:
         action:
       default: []
 
-#mode: single
-mode: parallel
+mode: !input mode
+max: !input max
 max_exceeded: silent
 
 trigger:
