Allow custom automation mode config

--- a/blueprints/automation/calex/calex-smart-remote.yaml
+++ b/blueprints/automation/calex/calex-smart-remote.yaml
@@ -8,14 +8,35 @@ blueprint:
   domain: automation
 
   input:
+    mode:
+      name: Automation Mode
+      description: "https://www.home-assistant.io/docs/automation/modes/"
+      default: restart
+      selector:
+        select:
+          mode: dropdown
+          options:
+            - single
+            - restart
+            - queued
+            - parallel
+    max:
+      name: Automation Max Queue
+      description: The maximum number of runs that can be executing and/or queued up at a time.
+      default: 10
+      selector:
+        number:
+          mode: box
+          min: 1
+          max: 100
     remote:
       name: Calex remote control
       description: Select the remote control you wish to use.
       selector:
         device:
           integration: zha
-#          manufacturer: Calex 
-#          model: Smart Wall Switch 
+#          manufacturer: Calex
+#          model: Smart Wall Switch
     light:
       name: Light
       selector:
@@ -32,7 +53,8 @@ blueprint:
 #          max: 100
 #          unit_of_measurement: percentage
 
-mode: restart
+mode: !input mode
+max: !input max
 max_exceeded: silent
 
 trigger:
