--- a/blueprints/automation/ikea/ikea-styrbar-remote-4-button-default.yaml
+++ b/blueprints/automation/ikea/ikea-styrbar-remote-4-button-default.yaml
@@ -46,6 +46,30 @@ blueprint:
           mode: slider
           step: 1
           unit_of_measurement: "%"
+    button_left_short:
+      name: Left button - short press
+      description: Action to run on short left button press
+      default: []
+      selector:
+        action:
+    button_left_long:
+      name: Left button - long press
+      description: Action to run on long left button press
+      default: []
+      selector:
+        action:
+    button_right_short:
+      name: Right button - short press
+      description: Action to run on short right button press
+      default: []
+      selector:
+        action:
+    button_right_long:
+      name: Right button - long press
+      description: Action to run on long right button press
+      default: []
+      selector:
+        action:
 
 mode: restart
 max_exceeded: silent
