--- a/blueprints/automation/calex/calex-smart-remote.yaml
+++ b/blueprints/automation/calex/calex-smart-remote.yaml
@@ -1,6 +1,6 @@
 blueprint:
 
-  name: ZHA - CALEX - Smart remote - Custom Actions
+  name: ZHA - CALEX - Smart remote
 
   description: >-
     This automation simulates the use of the Calex Dimmer Switch Colour Control
